--- a/requirements.txt
+++ b/requirements.txt
@@ -1,97 +1,60 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
-anthropic==0.2.10
-anyio==3.7.0
+annotated-types==0.5.0
+anyio==3.7.1
 async-timeout==4.0.2
 attrs==23.1.0
-Authlib==1.2.0
-bcrypt==4.0.1
 certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
-cmake==3.26.4
-cohere==3.10.0
-cryptography==41.0.1
-dataclasses-json==0.5.8
-decorator==5.1.1
-dill==0.3.6
+charset-normalizer==3.2.0
+click==8.1.4
+dataclasses-json==0.5.9
 dnspython==2.3.0
 email-validator==2.0.0.post2
-exceptiongroup==1.1.1
-fastapi==0.97.0
-filelock==3.12.2
+exceptiongroup==1.1.2
+fastapi==0.100.0
 frozenlist==1.3.3
-fsspec==2023.6.0
 greenlet==2.0.2
 h11==0.14.0
-httpcore==0.17.2
-httptools==0.5.0
+httpcore==0.17.3
+httptools==0.6.0
 httpx==0.24.1
-huggingface-hub==0.15.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
-langchain==0.0.207
-langchainplus-sdk==0.0.16
-lit==16.0.6
-manifest-ml==0.0.1
+langchain==0.0.229
+langchainplus-sdk==0.0.20
 MarkupSafe==2.1.3
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
-motor==3.1.2
-mpmath==1.3.0
+motor==3.2.0
 multidict==6.0.4
 mypy-extensions==1.0.0
-networkx==3.1
-nlpcloud==1.0.42
 numexpr==2.8.4
-numpy==1.25.0
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
+numpy==1.25.1
 openai==0.27.8
 openapi-schema-pydantic==1.2.4
-openlm==0.0.5
-orjson==3.9.1
+orjson==3.9.2
 packaging==23.1
-pycparser==2.21
-pydantic==1.10.9
-pymongo==4.3.3
+pydantic==1.10.11
+pydantic-extra-types==2.0.0
+pydantic-settings==2.0.1
+pydantic_core==2.1.2
+pymongo==4.4.0
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0
-redis==4.5.5
-regex==2023.6.3
 requests==2.31.0
-safetensors==0.3.1
 sniffio==1.3.0
-SQLAlchemy==2.0.16
-sqlitedict==2.1.0
+SQLAlchemy==2.0.18
 starlette==0.27.0
-sympy==1.12
 tenacity==8.2.2
-tokenizers==0.13.3
-torch==2.0.1
 tqdm==4.65.0
-transformers==4.30.2
-triton==2.0.0
 typing-inspect==0.9.0
-typing_extensions==4.6.3
+typing_extensions==4.7.1
 ujson==5.8.0
-urllib3==1.26.16
+urllib3==2.0.3
 uvicorn==0.22.0
 uvloop==0.17.0
-validators==0.20.0
 watchfiles==0.19.0
-weaviate-client==3.21.0
 websockets==11.0.3
 yarl==1.9.2
