--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ async-timeout==4.0.2
 attrs==23.1.0
 certifi==2023.5.7
 charset-normalizer==3.2.0
+click==8.1.5
 dataclasses-json==0.5.12
 dnspython==2.4.0
 exceptiongroup==1.1.2
@@ -27,6 +28,7 @@ openapi-schema-pydantic==1.2.4
 packaging==23.1
 pydantic==1.10.11
 pymongo==4.4.1
+python-dotenv==1.0.0
 PyYAML==6.0.1
 requests==2.31.0
 sniffio==1.3.0
@@ -37,4 +39,5 @@ tqdm==4.65.0
 typing-inspect==0.9.0
 typing_extensions==4.7.1
 urllib3==2.0.3
+uvicorn==0.23.1
 yarl==1.9.2
