--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,97 @@
+absl-py==1.4.0
 aiohttp==3.8.4
 aiosignal==1.3.1
 anyio==3.7.1
+astunparse==1.6.3
 async-timeout==4.0.2
 attrs==23.1.0
+Authlib==1.2.1
+backoff==2.2.1
+cachetools==5.3.1
 certifi==2023.5.7
+cffi==1.15.1
 charset-normalizer==3.2.0
 click==8.1.5
+cohere==4.18.0
+cryptography==41.0.2
 dataclasses-json==0.5.12
+decorator==5.1.1
+Deprecated==1.2.14
 dnspython==2.4.0
 exceptiongroup==1.1.2
 fastapi==0.100.0
+fastavro==1.7.4
+filelock==3.12.2
+flatbuffers==23.5.26
+flupy==1.2.0
 frozenlist==1.4.0
+fsspec==2023.6.0
+gast==0.4.0
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
 greenlet==2.0.2
+grpcio==1.56.2
 h11==0.14.0
+h5py==3.9.0
 httpcore==0.17.3
+huggingface-hub==0.16.4
 idna==3.4
+importlib-metadata==6.8.0
+keras==2.13.1
 langchain==0.0.235
 langsmith==0.0.7
+libclang==16.0.6
+Markdown==3.4.3
+MarkupSafe==2.1.3
 marshmallow==3.19.0
 motor==3.2.0
 multidict==6.0.4
 mypy-extensions==1.0.0
 numexpr==2.8.4
-numpy==1.25.1
+numpy==1.24.3
+oauthlib==3.2.2
 openai==0.27.8
 openapi-schema-pydantic==1.2.4
+opt-einsum==3.3.0
 packaging==23.1
+pgvector==0.1.8
+protobuf==4.23.4
+psycopg2-binary==2.9.7
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
 pydantic==1.10.11
 pymongo==4.4.1
 python-dotenv==1.0.0
 PyYAML==6.0.1
+regex==2023.6.3
 requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+safetensors==0.3.1
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.19
 starlette==0.27.0
 tenacity==8.2.2
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-io-gcs-filesystem==0.32.0
+termcolor==2.3.0
+tokenizers==0.13.3
 tqdm==4.65.0
+transformers==4.31.0
 typing-inspect==0.9.0
-typing_extensions==4.7.1
-urllib3==2.0.3
+typing_extensions==4.5.0
+urllib3==1.26.16
 uvicorn==0.23.1
+validators==0.20.0
+vecs==0.3.0
+weaviate-client==3.22.1
+Werkzeug==2.3.6
+wrapt==1.15.0
 yarl==1.9.2
+zipp==3.16.2
